--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ image_config: &image_config
   # either as project-specific environment variables
   # or as resources in your organization's org-global Context
 
-  IMAGE_NAME: Dunchyk
+  IMAGE_NAME: dunchyk
 
-  IMAGE_TAG: Circle
+  IMAGE_TAG: circle
 
   # NOTE: if you're modifying this config.yml file manually
   # rather than using the included setup script,
@@ -54,7 +54,7 @@ jobs:
 
   test_image:
     docker:
-      - image: $DOCKER_USERNAME/Dunchyk:Circle
+      - image: $DOCKER_USERNAME/dunchyk:circle
         environment:
           <<: *image_config
 
